--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -29,7 +29,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/Helper.php"
+            "app/Helpers/Helper.php",
+            "app/Helpers/UserHelper.php"
         ]
     },
     "autoload-dev": {
