--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "spatie/laravel-pjax": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
