program manage order page

--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -41,7 +41,8 @@
             "app/Helpers/UpdatePasswordHelper.php",
             "app/Helpers/Admin/CategoryHelper.php",
             "app/Helpers/Admin/ProductHelper.php",
-            "app/Helpers/Admin/UserHelper.php"
+            "app/Helpers/Admin/UserHelper.php",
+            "app/Helpers/Admin/OrderHelper.php"
         ]
     },
     "autoload-dev": {
