--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -39,7 +39,8 @@
             "app/Helpers/EmailHelper.php",
             "app/Helpers/HistoryOrderHelper.php",
             "app/Helpers/UpdatePasswordHelper.php",
-            "app/Helpers/ManagerCategoryHelper.php"
+            "app/Helpers/Admin/CategoryHelper.php",
+            "app/Helpers/Admin/ProductHelper.php"
         ]
     },
     "autoload-dev": {
