--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-pjax": "^2.1"
+        "spatie/laravel-pjax": "^2.1",
+        "spatie/laravel-searchable": "^1.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -32,6 +33,7 @@
         },
         "files": [
             "app/Helpers/Helper.php",
+            "app/Helpers/ButtonHelper.php",
             "app/Helpers/UserHelper.php",
             "app/Helpers/RatingHelper.php",
             "app/Helpers/RegistHelper.php",
