--- a/drinkfood/composer.json
+++ b/drinkfood/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-pjax": "^2.1",
         "spatie/laravel-searchable": "^1.10"
     },
